# SoftWare

./: CMakeLists.txt  CodeLine.sh
com/inc/Crc/: soft_crc.h
com/inc/List/: soft_list.h
com/inc/Socket/: soft_select.h  soft_socket_pub.h
com/inc/Stack/: soft_stack.h
com/inc/ThreadPool/: soft_thread_pool.h
com/inc/linux_msg/: linux_msgQueue.h
com/inc/linux_sem/: linux_sem.h
com/inc/linux_shm/: linux_shm.h
com/src/: CMakeLists.txt
com/src/Crc/: CMakeLists.txt  soft_crc.c
com/src/Epoll/: soft_epoll.c
com/src/Select/: soft_select.c
com/src/Socket/: CMakeLists.txt  soft_poll.c  soft_socket_fun.c
com/src/Stack/: soft_stack.c
com/src/ThreadPool/: ReadMe
com/src/linux_msg/: CMakeLists.txt  linux_msgQueue.c
com/src/linux_sem/: CMakeLists.txt  linux_sem.c
com/src/linux_shm/: CMakeLists.txt  linux_shm.c
config/: config.h.in
demo/Crc/: crcTest.c
demo/DomainToIP/: Domain2Ip  Domain2Ip.c
demo/MsgQueue/: CMakeLists.txt  main.c
demo/Sem/: CMakeLists.txt  main.c
demo/Tcp/: CMakeLists.txt  TcpClient  TcpRecv.c  TcpSender.c  TcpServer
demo/Udp/: UdpRecv.c  UdpSender.c
public/: config.h  soft_types.h
src/: CMakeLists.txt
