MESSAGE(STATUS "Enter: " ${CMAKE_CURRENT_SOURCE_DIR})

if (CONFIG_COMMON_CRC)
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Crc)
endif (CONFIG_COMMON_CRC)

if (CONFIG_COMMON_SOCKET)
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Socket)
endif (CONFIG_COMMON_SOCKET)

if (CONFIG_COMMON_LINUX_SHM) 
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/linux_shm)
endif (CONFIG_COMMON_LINUX_SHM)

if (CONFIG_COMMON_LINUX_MSG_QUEUE)
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/linux_msg)
endif (CONFIG_COMMON_LINUX_MSG_QUEUE)

if (CONFIG_COMMON_LINUX_SEM) 
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/linux_sem)
endif (CONFIG_COMMON_LINUX_SEM)

