INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/public)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/com/inc)

SET(SRC_LISTS TcpRecv.c)

LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

ADD_EXECUTABLE(TcpClient ${SRC_LISTS})

if (CONFIG_COMMON_SOCKET)
#   Below methord is both OK
    TARGET_LINK_LIBRARIES(TcpClient softsocket)
#    TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} softcrc)
#    TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} -lsoftcrc)
endif (CONFIG_COMMON_SOCKET)

